@startuml
!include ../.PlantUMLClass.config

abstract class Command <<abstract>> {
    # logger: Logger
    - command: String
    - isExit: boolean
    + Command(command: String): Command
    + setExit(exit: boolean): void
    + isExit(): boolean
    + <<abstract>> execute(ui: Ui, authorList: AuthorList): void
}
class Ui {
}

Command ..> Ui : uses to print >

class AuthorList {
}

Command ..> AuthorList : alters >

class GreetCommand {
    + GreetCommand(): GreetCommand
    + execute(ui: Ui, authorList: AuthorList): void
}

class ByeCommand {
    + ByeCommand(): ByeCommand
    + execute(ui: Ui, authorList: AuthorList): void
}

class AddAuthorCommand {
    - authorName: String
    + AddAuthorCommand(authorName: String): AddAuthorCommand
    + execute(ui: Ui, authorList: AuthorList): void
}

class DeleteAuthorCommand {
    - authorName: String
    + DeleteAuthorCommand(authorName: String): DeleteAuthorCommand
    + execute(ui: Ui, authorList: AuthorList): void
}

class AddMangaCommand {
    - authorName: String
    - mangaName: String
    + AddMangaCommand(argsAuthorManga: String[]): AddMangaCommand
    + execute(ui: Ui, authorList: AuthorList): void
}

class DeleteMangaCommand {
    - authorName: String
    - mangaName: String
    + DeleteMangaCommand(argsAuthorManga: String[]): DeleteMangaCommand
    + execute(ui: Ui, authorList: AuthorList): void
}

class AddSalesCommand {
    - argsAuthorMangaQtyPrice: String[]
    + AddSalesCommand(argsAuthorMangaQtyPrice: String[]): AddSalesCommand
    + execute(ui:Ui, authorList: AuthorList): void
}

class ViewAuthorsCommand {
    + ViewAuthorsCommand(): ViewAuthorsCommand
    + execute(ui: Ui, authorList: AuthorList): void
}

class ViewMangasCommand {
    - authorName: String
    - includeDeadline: boolean
    - includeSales: boolean
    + ViewMangasCommand(authorName: String, includeDeadline: boolean, includeSales: boolean): ViewMangasCommand
    + execute(ui: Ui, authorList: AuthorList): void
}



Command <|-- GreetCommand
Command <|-- ByeCommand
Command <|-- AddAuthorCommand
Command <|-- DeleteAuthorCommand
Command <|-- AddMangaCommand
Command <|-- DeleteMangaCommand
Command <|-- AddSalesCommand
Command <|-- ViewAuthorsCommand
Command <|-- ViewMangasCommand

@enduml